bundles/agw-obo-token-exchange/44-mcpx-route-mcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcpx
  namespace: agentgateway-system
spec:
  parentRefs:
  - name: agw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /obo/mcp
      backendRefs:
      - name: mcpx-backend
        group: enterpriseagentgateway.solo.io
        kind: EnterpriseAgentgatewayBackend
